# skgrf

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .tool-versions  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  TODO.md  build.py  buildpre.py  pyproject.toml
.github/workflows/: build.yml  build_and_test.yml  release.yml
docs/: conf.py  grf_boosted_regressor.rst  grf_causal_regressor.rst  grf_instrumental_regressor.rst  grf_local_linear_regressor.rst  grf_quantile_regressor.rst  grf_regressor.rst  grf_survival.rst  index.rst  requirements.txt
docs/ensemble/: forest_boosted_regressor.rst  forest_causal_regressor.rst  forest_classifier.rst  forest_instrumental_regressor.rst  forest_local_linear_regressor.rst  forest_quantile_regressor.rst  forest_regressor.rst  forest_survival.rst
docs/tree/: tree_causal_regressor.rst  tree_classifier.rst  tree_instrumental_regressor.rst  tree_interface.rst  tree_local_linear_regressor.rst  tree_quantile_regressor.rst  tree_regressor.rst  tree_survival.rst
skgrf/: __init__.py  base.py  grf.pyx  grf_.pxd
skgrf/ensemble/: DataNumpy.h  __init__.py  base.py  boosted_regressor.py  causal.py  causal_regressor.py  classifier.py  forest_quantile_regressor.py  forest_regressor.py  grf.pyx  grf_.pxd  instrumental.py  instrumental_regressor.py  local_linear_regressor.py  quantile_regressor.py  regressor.py  survival.py
skgrf/tree/: __init__.py  _tree.py  base.py  causal_regressor.py  classifier.py  instrumental_regressor.py  local_linear_regressor.py  quantile_regressor.py  regressor.py  survival.py
skgrf/utils/: shap.py  validation.py
tests/: conftest.py  test_tools.py
tests/_fixtures/causalml/: README.md  regression.py
tests/datasets/: regression.py
tests/ensemble/: test_boosted_regressor.py  test_causal.py  test_causal_regressor.py  test_classifier.py  test_forest_quantile_regressor.py  test_forest_regressor.py  test_instrumental.py  test_instrumental_regressor.py  test_local_linear_regressor.py  test_quantile_regressor.py  test_regressor.py  test_survival.py
tests/fixtures/: regression.py
tests/tree/: test_causal_regressor.py  test_classifier.py  test_instrumental_regressor.py  test_local_linear_regressor.py  test_quantile_regressor.py  test_regressor.py  test_survival.py
