[tool.poetry]
name = "skgrf"
version = "0.1.0"
description = ""
authors = ["flynn <crf204@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.1"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.2"
Sphinx = "^3.3.1"
Cython = "^3.0a5"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_standard_library = ["setuptools"]