[tool.poetry]
name = "skgrf"
version = "0.1.1"
description = "python bindings for C++ generalized random forests (grf)"
authors = ["flynn <crf204@gmail.com>"]
build = "build.py"
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/crflynn/skgrf"
repository = "https://github.com/crflynn/skgrf"
documentation = "https://github.com/crflynn/skgrf"
include = [
    "skgrf/grf/**/*",
    "CHANGELOG.rst",
    "LICENSE.txt",
    "README.rst",
]
keywords = ["generalized", "random", "forest", "machine", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = "^3.6.1"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.2"
Sphinx = "^3.3.1"
Cython = "^3.0a5"
pytest-cov = "^2.10.1"
sphinx-rtd-theme = "^0.5.1"
pandas = "^1.0.3"
pytest-xdist = "^2.2.1"
#shap = "^0.39.0"
#matplotlib = {version = "^3.4.2", python = ">=3.7,<4.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_standard_library = ["setuptools", "typing"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:divide by zero encountered in log:RuntimeWarning",
    "ignore:Skipping check_sample_weights_invariance:sklearn.exceptions.SkipTestWarning",
]
